tests/toylang/neg/001605_mutation.toylang
program a = { while a do do; } .
